--- a/templates/contact.page.tmpl
+++ b/templates/contact.page.tmpl
@@ -1,11 +1,10 @@
 {{template "base".}}
 
 {{define "content"}}
-
 <div class="container">
     <div class="row">
         <div class="col">
-            <h1 class="text-center mt-4">Welcome To About</h1>
+            <h1 class="text-center mt-4">Welcome To contact page</h1>
         </div>
     </div>
 </div>
