--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bread And Breackfast</title>
+    <title>Roomie</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/css/datepicker-bs4.min.css">
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
@@ -78,7 +78,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/js/datepicker-full.min.js"></script>
     <script src="https://unpkg.com/notie"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    
+    <script src="/static/js/app.js"></script>
 
     {{block "js".}}
 
@@ -136,130 +136,6 @@
     {{with .Warning}}
     notify("{{.}}", "warning")
     {{end}}
-
-    
-
-
-
-      //prompt is our js module for all alerts, notifacation etc
-    function Prompt(){
-      let toast = function(c){ 
-      const {
-
-        msg = "",
-        icon = "success",
-        position = "top-end",
-
-      } = c;
-
-
-        const Toast = Swal.mixin({
-          toast: true,
-          title: msg,
-          position: position,
-          icon: icon,
-          showConfirmButton: false,
-          timer: 3000,
-          timerProgressBar: true,
-          didOpen: (toast) => {
-          toast.addEventListener('mouseenter', Swal.stopTimer)
-          toast.addEventListener('mouseleave', Swal.resumeTimer)
-  }
-})
-
-Toast.fire({})
-      }
-
-      let success = function(c){
-        const {
-          msg = "",
-          title = "",
-          footer = "",
-        } = c;
-
-        Swal.fire({
-          icon: 'success',
-          title: title,
-          text: msg,
-          footer: footer,
-                  })
-      } 
-
-      let error = function(c){
-        const {
-          msg = "",
-          title = "",
-          footer = "",
-        } = c;
-
-        Swal.fire({
-          icon: 'error',
-          title: title,
-          text: msg,
-          footer: footer,
-                  })
-      }
-
-
-      async function custom(c){
-        const {
-          msg = "",
-          title = "",
-        } = c;
-
-        const { value: result } = await Swal.fire({
-          title: title,
-          html: msg,
-          backdrop: false,  
-          focusConfirm: false,
-          showCancelButton: true,
-          willOpen: () => {
-            if (c.willOpen !== undefined){
-              c.willOpen();
-            }
-          },
-
-          preConfirm: () => {
-            return [
-              document.getElementById('start').value,
-              document.getElementById('end').value
-                    ]
-                            },
-              didOpen: () => {
-               if (c.didOpen !== undefined) {
-                 c.didOpen();
-               }
-              }
-          })
-      
-          if (result){
-            
-            if (result.dismiss !== Swal.DismissReason.cancel) {
-              if (result.value !=="") {
-                if (c.callback !== undefined) {
-                  c.callback(result);
-                }
-              } else {
-                c.callback(false);
-              }
-            } else {
-              c.callback(false);
-            }
-
-          }
-
-
-      }
-
-                  return {
-                  toast: toast,
-                  success: success,
-                  error: error,
-                  custom: custom,
-                        }
-
-     }
-
 
     </script>
 
