--- a/templates/make-reservation.page.tmpl
+++ b/templates/make-reservation.page.tmpl
@@ -4,11 +4,22 @@
 <div class="container">
     <div class="row">
         <div class="col">
-           <h1>Make reservation</h1>
-           
            {{$res := index .Data "reservation"}}
-                <form action="" method="POST" class="" novalidate>
+            
+           <h1>Make reservation</h1>
+
+            <p><strong>Reservation Details</strong><br>
+            Room: {{$res.Room.RoomName}}<br>
+            Arrival: {{index .StringMap "start_date"}}<br>
+            Departure: {{index .StringMap "end_date"}}
+            </p>
+           
+          
+                <form action="/make-reservation" method="POST" class="" novalidate>
                     <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
+                    <input type="hidden" name="start_date" value="{{index .StringMap "start_date"}}">
+                    <input type="hidden" name="end_date" value="{{index .StringMap "end_date"}}">
+                    <input type="hidden" name="room_id" value="{{$res.RoomID}}">
 
                     <div class="form-group mt-5">
                         <label for="first_name">First Name:</label>
@@ -33,7 +44,7 @@
                         {{end}}
                         <input type="email" name="email" value="{{$res.Email}}" class="form-control {{with .Form.Errors.Get "email"}} is-invalid {{end}}" id="email" required autocomplete="off">
                     </div>
-                 
+
                     <div class="form-group">
                         <label for="phone">Phone:</label>
                         {{with .Form.Errors.Get "phone"}}
