--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -74,20 +74,22 @@
     {{end}}
 
 
-              <div class="row my-footer">
-                  <div class="col">
-                      Left
-                  </div>
+             <!--footer-->
 
-                  <div class="col">
-                      Middle
-                  </div>
-
-                  <div class="col">
-                      Right
-                  </div>
-
+             <div class="row my-footer" style="margin-top: 2em;">
+             <footer class="static-bottom bg-light text-center text-lg-start">
+              <!-- Copyright -->
+              <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+                © 2021 Copyright:
+                <a class="text-dark" href="/">Roomie</a>
               </div>
+              <!-- Copyright -->
+            </footer>
+
+          </div>
+
+
+             <!--footer closed-->
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
